--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </header>
         <div class="container">
           <div class="hero-pic">
-            <img src="images/JacobElohePhoto.jpg" alt="profile pic" />
+            <img src="JacobElohePhoto.jpg" alt="profile pic" />
           </div>
           <div class="hero-text">
             <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
