--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Portfolio Website Design</title>
+    <title>Jacobelx.com</title>
+<!--     Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <!-- This is a link to a CSS file -->
+    <!-- <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,800;1,900&display=swap"
+    rel="stylesheet"
+  /> -->
     <link rel="stylesheet" href="style.css" />
     <!-- This is a link only for using icons -->
     <link
@@ -13,6 +36,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
   </head>
+
   <body>
     <div class="hero-header">
       <div class="wrapper">
@@ -30,17 +54,27 @@
               <span></span>
             </div>
             <style>
-                .ee{
-                    color: #910910;
-                }
+              .ee {
+                color: #910910;
+              }
             </style>
             <!-- Main navigation links -->
             <ul class="navlinks">
-              <li><a href="#ex"><i class="fa-solid fa-"></i>Home</a></li>
-              <li><a href="#"><i class="fa-solid fa-"></i>Portfolio</a></li>
-              <li><a href="#"><i class="fa-solid fa-"></i>Resume</a></li>
-              <li><a href="#"><i class="fa-solid fa-"></i>Blog</a></li>
-              <li class="ee"><a href="#"><i class="fa-solid fa-phone"></i> Contact</a></li>
+              <li>
+                <a href="#ex"><i class="fa-solid fa-"></i>Home</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-solid fa-"></i>Portfolio</a>
+              </li>
+              <li>
+                <a href="#bb"><i class="fa-solid fa-"></i>Resume</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-solid fa-"></i>Blog</a>
+              </li>
+              <li class="ee">
+                <a href="#Contact"><i class="fa-solid fa-phone"></i> Contact</a>
+              </li>
             </ul>
           </nav>
         </header>
@@ -64,8 +98,12 @@
             </div>
 
             <div class="social">
-              <a href="https://github.com/elohejacs"><i class="fa-brands fa-github"></i></a>
-              <a href="https://www.instagram.com/jacobelx?igsh=Y2RncDRscHF0enc4"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://github.com/elohejacs"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              <a href="https://www.instagram.com/jacobelx?igsh=Y2RncDRscHF0enc4"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
               <a href="#"><i class="fa-brands fa-linkedin"></i></a>
               <a href="#"><i class="fa-brands fa-dribbble"></i></a>
               <a href="#"><i class="fa-brands fa-pintrest"></i></a>
@@ -75,32 +113,137 @@
       </div>
     </div>
     <!-- otherrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr -->
-     <div class="bodying">
-        <div class="aboutheading" id="ex">
-            <h1><i class="fa-solid fa-wand-magic-sparkles"></i> Explore</h1>
-            <!-- <p>Look so far eventually some people rise up just to get some re-call jacobel</p> -->
-          </div>
-            <div class="hot">
-              I am a passionate student at ALU (African
-              Leadership University), studying to become a Software Engineer with a
-              mission to empower African nations. My goal is to help local businesses
-              integrate AI into their daily activities, enabling them to increase
-              productivity, improve efficiency, and unlock new growth opportunities.
-              Through my studies, I have gained practical skills in web development,
-              JavaScript, Python, Regex, programming, and database management, which I
-              use to create innovative solutions. This portfolio showcases my projects
-              and reflects my journey of using technology to address real-world
-              challenges. I believe that by teaching businesses how to leverage AI and
-              digital tools, we can drive meaningful change and contribute to Africa’s
-              development. My work is guided by a commitment to innovation,
-              collaboration, and sustainability. Let’s work together to harness the
-              power of technology and build a brighter future for our communities!
+    <div class="bodying">
+      <div class="aboutheading" id="ex">
+        <h1>
+          <i class="fa-solid fa-wand-magic-sparkles"></i>
+          <span style="cursor: pointer"> About me</span>
+        </h1>
+        <!-- <p>Look so far eventually some people rise up just to get some re-call jacobel</p> -->
+      </div>
+      <div class="hot">
+        I am a passionate student at ALU (African Leadership University),
+        studying to become a Software Engineer with a mission to empower African
+        nations. My goal is to help local businesses integrate AI into their
+        daily activities, enabling them to increase productivity, improve
+        efficiency, and unlock new growth opportunities. Through my studies, I
+        have gained practical skills in web development, JavaScript, Python,
+        Regex, programming, and database management, which I use to create
+        innovative solutions. This portfolio showcases my projects and reflects
+        my journey of using technology to address real-world challenges. I
+        believe that by teaching businesses how to leverage AI and digital
+        tools, we can drive meaningful change and contribute to Africa’s
+        development. My work is guided by a commitment to innovation,
+        collaboration, and sustainability. Let’s work together to harness the
+        power of technology and build a brighter future for our communities!
+      </div>
+      <div class="holder" id="#bb">
+        <h1>SKILLS</h1>
+        <div class="skills">
+          <button class="button button1">Web development <span class="opp">  100%</span></button><br />
+          <button class="button button2">Regex <span class="opp">  85%</span></button><br />
+          <button class="button button3">Programming <span class="opp">  90%</spa></button><br />
+          <button class="button button4">Database management <span class="opp">  60%</span></button>
+          <button class="button button5">Python <span class="opp">  70%</span></button>
+        </div>
+      </div>
+    </div>
+    <div class="container1">
+        <main class="row">
+    
+  
+          <section class="col left">
+  
+            <div class="contactTitle">
+              <h2>Hire me</h2>
+              <p>
+                Only for business purposes, please! hh.
+              </p>
             </div>
-            <!-- <div class="alu-image">
-              <img src="Images/ALU.jpg" alt="ALU">
-            </div> -->
-          </div>
-     </div>
+              <div class="contactInfo">
+              <div class="iconGroup">
+                <div class="icon">
+                  <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="details">
+                  <span>Phone</span>
+                  <span>+250 792 560 660</span>
+                </div>
+              </div>
+  
+              <div class="iconGroup">
+                <div class="icon">
+                  <i class="fa-solid fa-envelope"></i>
+                </div>
+                <div class="details">
+                  <span>Email</span>
+                  <span>elohe.jacs@gmail.com</span>
+                </div>
+              </div>
+  
+              <div class="iconGroup">
+                <div class="icon">
+                  <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div class="details">
+                  <span>Location</span>
+                  <span>Kgl KM Street, A Road, Kimironko</span>
+                </div>
+              </div>
+            </div>
+  
+  
+            <!--   Social Media stfaaaaaaaaasad     -->
+  
+            <div class="socialMedia">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+  
+            <!--     Social Media Ends     -->
+          </section>
+  
+         
+  
+          <section class="col right">
+            <!--  *******   Form Starts   *******  -->
+  
+            <form class="messageForm">
+              <div class="inputGroup halfWidth">
+                <input type="text" name="" required="required" />
+                <label>Your Name</label>
+              </div>
+  
+              <div class="inputGroup halfWidth">
+                <input type="email" name="" required="required" />
+                <label>Email</label>
+              </div>
+  
+              <div class="inputGroup fullWidth">
+                <input type="text" name="" required="required" />
+                <label>Subject</label>
+              </div>
+  
+              <div class="inputGroup fullWidth">
+                <textarea required="required"></textarea>
+                <label>Say Something</label>
+              </div>
+  
+              <div class="inputGroup fullWidth">
+                <button>Send Message</button>
+              </div>
+            </form>
+  
+            <!--  *******   Form Ends   *******  -->
+          </section>
+  
+          <!--  *******   Right Section (Column) Ends   *******  -->
+        </main>
+      </div>
+    <!-- home -->
+    <!-- </div> -->
     <!-- Other division -->
     <!-- <div class="aboutheading2">
         <section class="about">
@@ -125,9 +268,9 @@
       });
 
       var typed = new Typed(".input", {
-        strings: ["Frontend Developer", "UX Designer", "Web Developer"],
-        typedSpeed: 70,
-        backSpeed: 55,
+        strings: ["Frontend Developer", "Backend designer", "Web Developer"],
+        typedSpeed: 80,
+        backSpeed: 70,
         loop: true,
       });
     </script>
